# nglint

./: .gitignore  LICENSE  README.md  nglint.cabal  test.conf
app/: Main.hs
doc/: bibliography.bib  metadata.yaml  report.md  report.tex  template.tex
example/: test.conf  test3.conf
script/: make-report
src/: Main.hs
src/NgLint/: Linter.hs  Matchers.hs  Messages.hs  Parser.hs  Position.hs  Rules.hs
src/NgLint/Output/: Common.hs  Gcc.hs  Pretty.hs
