name:                nglint
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

homepage:            https://github.com/federicobond/nglint
license:             MIT
license-file:        LICENSE
author:              Federico Bond
maintainer:          federicobond@gmail.com
category:            Static Analysis
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NgLint.Linter
                     , NgLint.Matchers
                     , NgLint.Messages
                     , NgLint.Output.Common
                     , NgLint.Output.Gcc
                     , NgLint.Output.Pretty
                     , NgLint.Parser
                     , NgLint.Position
                     , NgLint.Rules
  build-depends:       base >= 4.8 && <4.9
                     , parsec >=3.1.9 && <4.0
                     , ansi-terminal >=0.6.2.3 && <0.6.3
  default-language:    Haskell2010

executable nglint
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base
                     , nglint
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/federicobond/nglint
